 PR optimization/6713  * loop.c (loop_givs_rescan): Explicitly delete the insn that  sets a non-replaceable giv after issuing the new one.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55539 138bc75d-0d04-0410-961f-82ee72b054a4